fixed contact layout issue on iOS

--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -11,8 +11,8 @@ form {
 }
 
 .pure-group {
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
     margin-top: 1em;
 }
 
